<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/fifteen_sp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_one_dp"
                android:text="@string/welcome_to"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/twenty_one_dp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/eighteen_sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/hundred_fifty"
                android:layout_height="@dimen/hundred_fifty"
                android:layout_marginTop="@dimen/thirty_dp"
                android:layout_marginBottom="@dimen/twenty_one_dp"
                app:srcCompat="@drawable/ic_avatar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_username_msg"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/fifteen_sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:text="@string/password"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/fifteen_sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:inputType="textPassword" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:layout_margin="@dimen/ten_dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>