<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim_black_600"
    android:clickable="true">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/ten_dp"
        app:cardCornerRadius="@dimen/ten_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/ten_dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/orderType"
                android:textColor="@color/grey_800"
                android:textSize="21sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eighteen_sp"
                android:text="@string/enter_qty"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/fifteen_sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:inputType="number"
                android:id="@+id/quantity"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:text="@string/enter_cost"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/fifteen_sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:inputType="numberDecimal"
                android:id="@+id/cost"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirmOrder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:background="@color/colorPrimary"
                android:text="@string/confirm_order"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>