<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/ten_dp"
    app:cardCornerRadius="@dimen/ten_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ten_dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/entityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_800"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/entityId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_600"
            android:textSize="@dimen/fifteen_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_sp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/eighteen_sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/entityCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/eighteen_sp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/eighteen_sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty_dp"
                android:layout_margin="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sell"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty_dp"
                android:layout_margin="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/sell"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>